# catgraph-surreal

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
examples/: cospan_v1_roundtrip.rs  fingerprint_search.rs  graph_traversal.rs  hyperedge_roundtrip.rs  petri_net_persistence.rs  wasi_edge_client.rs
src/: cospan_store.rs  edge_store.rs  error.rs  fingerprint.rs  hypergraph_evolution_store.rs  lib.rs  multiway_store.rs  named_cospan_store.rs  node_store.rs  persist.rs  petri_net_store.rs  query.rs  schema.rs  schema_v2.rs  span_store.rs  types.rs  types_v2.rs  utils.rs  wiring_store.rs
src/hyperedge/: decompose.rs  mod.rs  provenance.rs  reconstruct.rs
tests/: domain_api_orchestration.rs  domain_chemical_reactions.rs  domain_circuit_design.rs  domain_code_analysis.rs  domain_dataflow_pipeline.rs  v1_cospan_roundtrip.rs  v1_named_cospan_roundtrip.rs  v1_span_roundtrip.rs  v1_v2_coexistence.rs  v2_atomic_decompose.rs  v2_fingerprint_search.rs  v2_graph_recursion.rs  v2_hypergraph_evolution.rs  v2_named_cospan_decompose.rs  v2_node_edge_crud.rs  v2_petri_net.rs  v2_provenance.rs  v2_schema_modernization.rs  v2_span_decompose.rs  v2_wiring_diagram.rs
