[package]
name = "catgraph-surreal"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "SurrealDB persistence layer for catgraph cospan/span structures"
repository = "https://github.com/tsondru/catgraph-surreal"
homepage = "https://github.com/tsondru/catgraph-surreal"
authors = ["tsondru", "Claude <noreply@anthropic.com>"]
keywords = ["surrealdb", "category-theory", "cospan", "persistence"]
categories = ["database", "mathematics"]
publish = false

[dependencies]
catgraph = { git = "https://github.com/tsondru/catgraph", tag = "v0.11.0" }
catgraph-physics = { git = "https://github.com/tsondru/catgraph", tag = "v0.11.0" }
catgraph-applied = { git = "https://github.com/tsondru/catgraph", tag = "v0.11.0" }
surrealdb = { version = "3.0.5", default-features = false, features = ["kv-mem"] }
surrealdb-types = "3.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
rust_decimal = { version = "1", features = ["serde-str"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

# ---------------------------------------------------------------------------
# Local development override
# ---------------------------------------------------------------------------
# Uncomment the patch below to use a local catgraph checkout instead of the
# git tag. Required when iterating on changes that span both repos.
#
# Make sure ../catgraph points at your local catgraph workspace, then re-run
# `cargo build` — Cargo will pick up the local sources and ignore the git tag.
#
# Re-comment before pushing to keep the released artifact reproducible.

# [patch."https://github.com/tsondru/catgraph"]
# catgraph = { path = "../catgraph/catgraph" }
# catgraph-physics = { path = "../catgraph/catgraph-physics" }
# catgraph-applied = { path = "../catgraph/catgraph-applied" }
#
# All three deps use the same git tag so Cargo deduplicates the checkout.
# When using [patch], all three paths are required.

# Phase 3.2 local-verification override (re-enable if the catgraph v0.10.7 tag
# doesn't exist yet or while iterating locally across repos):
# [patch."https://github.com/tsondru/catgraph"]
# catgraph = { path = "../catgraph/catgraph" }
# catgraph-physics = { path = "../catgraph/catgraph-physics" }
# catgraph-applied = { path = "../catgraph/catgraph-applied" }
