[package]
name = "catgraph-surreal"
version = "0.10.1"
edition = "2024"
license = "MIT"
description = "SurrealDB persistence layer for catgraph cospan/span structures"
repository = "https://github.com/tsondru/catgraph-surreal"
homepage = "https://github.com/tsondru/catgraph-surreal"
authors = ["tsondru", "Claude <noreply@anthropic.com>"]
keywords = ["surrealdb", "category-theory", "cospan", "persistence"]
categories = ["database", "mathematics"]
publish = false

[features]
# Default-on — enables the embedded `kv-mem` + `kv-surrealkv` backends, so
# `any::connect("mem://")` and `any::connect("surrealkv://path")` work.
# Disable with `--no-default-features` on builds that only need a remote
# client (e.g. a WASM sidecar talking to a native SurrealDB over WS).
# See README "WASM / edge support" for the remote-client feature matrix.
default = ["native-embedded"]
native-embedded = ["surrealdb/kv-mem", "surrealdb/kv-surrealkv"]

# Remote client transports. Opt-in so a slim native-embedded build doesn't
# pull the rustls / tungstenite chain. Both can be combined with
# `native-embedded` when a process wants to speak both dialects.
remote-ws = ["surrealdb/protocol-ws"]
remote-http = ["surrealdb/protocol-http"]

[dependencies]
# All three catgraph deps share one git tag for Cargo source deduplication
# (see workspace convention). v0.12.0 is the Corel co-release tag on
# catgraph; catgraph-physics-v0.2.2 + catgraph-applied-v0.4.0 live at the
# same SHA so the shared-tag pattern still works.
catgraph = { git = "https://github.com/tsondru/catgraph", tag = "v0.12.0" }
catgraph-physics = { git = "https://github.com/tsondru/catgraph", tag = "v0.12.0" }
catgraph-applied = { git = "https://github.com/tsondru/catgraph", tag = "v0.12.0" }
surrealdb = { version = "3.0.5", default-features = false }
surrealdb-types = "3.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Trimmed from "full" to the minimum needed for this crate: `rt` for the
# runtime + `#[tokio::main]`, `sync` for Mutex (used transitively),
# `macros` for `#[tokio::main]` / `#[tokio::test]`, `time` for
# `tokio::time::sleep` in hyperedge::decompose retry backoff. Drops
# `signal`, `process`, `net`, `io-util`, `io-std`, `fs` — none of which
# this crate uses directly and none of which build on wasm32-wasip1-*.
# Phase W.2 (2026-04-19).
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros", "time"] }
thiserror = "2"
rust_decimal = { version = "1", features = ["serde-str"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros", "time", "test-util"] }

# ---------------------------------------------------------------------------
# Local development override
# ---------------------------------------------------------------------------
# Uncomment the patch below to use a local catgraph checkout instead of the
# git tag. Required when iterating on changes that span both repos.
#
# Make sure ../catgraph points at your local catgraph workspace, then re-run
# `cargo build` — Cargo will pick up the local sources and ignore the git tag.
#
# Re-comment before pushing to keep the released artifact reproducible.

# [patch."https://github.com/tsondru/catgraph"]
# catgraph = { path = "../catgraph/catgraph" }
# catgraph-physics = { path = "../catgraph/catgraph-physics" }
# catgraph-applied = { path = "../catgraph/catgraph-applied" }
#
# All three deps use the same git tag so Cargo deduplicates the checkout.
# When using [patch], all three paths are required.

# Phase 3.2 local-verification override (re-enable if the catgraph v0.10.7 tag
# doesn't exist yet or while iterating locally across repos):
# [patch."https://github.com/tsondru/catgraph"]
# catgraph = { path = "../catgraph/catgraph" }
# catgraph-physics = { path = "../catgraph/catgraph-physics" }
# catgraph-applied = { path = "../catgraph/catgraph-applied" }
